Try fix underline email on ios

--- a/app/globals.css
+++ b/app/globals.css
@@ -100,3 +100,12 @@
     background-position: 468px 0;
   }
 }
+
+a[x-apple-data-detectors] {
+  color: inherit !important;
+  text-decoration: none !important;
+  font-size: inherit !important;
+  font-family: inherit !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+}
